# science-industry-talk

./: .gitignore  README.md
bccn_chess/: main.py
demo/: Dockerfile  pyproject.toml
demo/chess/: main.py  moves.py
demo/mlops/: demo.ipynb
demo/tests/: test_main.py
tests/: test_main.py
