[tool.poetry]
name = "bccn-chess"
version = "0.1.0"
description = "Development workflow demo through the game of bccn-chess"
authors = ["Paola Suárez <paola.suarez@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
